--- a/gui.css
+++ b/gui.css
@@ -7,9 +7,85 @@
     --button-bg-color: #5289b7;
     --button-hover-color: #0D28C2;
     --containers-color: #d0e2f8;
+    --table-border-color: #061a8c;
+    --table-bg-color: #ffffff
 }
 
+.box {
+    display: flex;
+    flex-direction: column;
+    margin: 2vh auto;
+    padding: 30px;
+    width: 70vw; /* Adjust the width as per your requirement */
+    max-height: 500px;
+    height: auto; /* Adjust the height as per your requirement */
+    background-color: var(--containers-color);
+    border-radius: 10px;/* Optional: Add a border for visual clarity */
+    overflow: auto;
+}
+
+
+.fc-view-container{
+    background-color: white;
+}
+
+.box .title{
+    text-align: left;
+    font-weight: bolder;
+    font-size: 25px;
+    color: var(--header-bg-color);
+}
+
+.table-container {
+    border-radius: 10px;
+    width: 100%;
+    border-collapse: collapse;
+    border: 1px solid var(--table-border-color);
+    background-color: var(--table-bg-color);
+    margin-top: 15px;
+}
+
+.table-container th,
+.table-container td {
+    border: 1px solid var(--header-bg-color);
+    padding: 8px;
+}
+
+.table-container th {
+    background-color: var(--header-bg-color);
+    color: white;
+}
+
+/* Add some basic styling for the list items */
+ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
+    display: flex; /* Make the container a flex container */
+}
+
+li {
+    margin-right: 10px; /* Add some spacing between list items */
+}
+/* Style for the loading circle */
+.loader {
+    border: 8px solid #f3f3f3;
+    border-top: 8px solid #3498db;
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    animation: spin 1s linear infinite;
+    margin: 20% auto;
+}
+
+/* Animation for the loading circle */
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+}
 body {
+    margin:0;
+    padding: 0;
     display: flex;
     flex-direction: column;
     text-align: center;
