--- a/gui/gui.css
+++ b/gui/gui.css
@@ -257,6 +257,12 @@ form {
     background-color: var(--header-bg-color); /* Change the background color on hover */
 }
 
+#display-area{
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
 
 .upload-btn {
     display: inline-block;
@@ -385,6 +391,17 @@ form {
     display: flex;
     flex-direction: row;
     text-align: left;
+}
+
+.file--options .option input{
+    border: 2px solid var(--header-bg-color);
+    background-color: var(--button-bg-color);
+    border-radius: 5px;
+    padding-left: 5px;
+    text-align: left;
+    color: white;
+    width: 109px;
+    margin-left: auto;
 }
 
 .option select{
