--- a/gui/gui.css
+++ b/gui/gui.css
@@ -480,6 +480,52 @@ form {
     border-radius: 10px;
 }
 
+#menu-linguini{
+    padding: 25px;
+    border: 4px solid var(--accent-color);
+    background-color: var(--box-bg-color);
+    color: var(--box-text-color);
+    display: flex;
+    width: 80%;
+    height: 10vh;
+    border-radius: 10px;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
+
+#menu-linguini h1{
+    font-size: 20px;
+}
+
+.linguini-inputs{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.linguini-option{
+    margin: 2px;
+}
+
+.linguini-option input{
+    width: 80%;
+    cursor: pointer;
+    border: 2px solid var(--header-bg-color); /* Set the border color to blue */
+    background-color: var(--button-bg-color);
+    border-radius: 5px;
+    padding-left: 5px;
+    text-align: left;
+    color: white; /* Set the text color to blue */
+}
+
+#menus-algos{
+    width: 100%;
+}
+
+.linguini-option select{
+    width:150px
+}
+
 .alg--choose label{
     font-weight: bolder;
     font-size: 20px;
